--- a/frontend/assets/container_labels.css
+++ b/frontend/assets/container_labels.css
@@ -16,6 +16,13 @@ body {
   font-size: 12pt;
 }
 
+.labels {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  box-sizing: border-box;
+}
+
 .label {
   display: flex;
   flex-wrap: wrap;
@@ -23,6 +30,7 @@ body {
   font-family: 'Spectral', serif;
   margin: 5px auto;
   overflow: scroll;
+  page-break-inside: avoid;
 }
 
 div.label > div {
@@ -96,46 +104,58 @@ div.label .indicator {
   height: 2in;
 }
 
-.avery-5163:nth-child(10) {
+.avery-5163:nth-child(10n) {
   page-break-after: always;
   break-after: always;
 }
 
-.avery-5163.chrome-label:nth-child(10) {
+.avery-5163.chrome-label:nth-child(10n) {
   page-break-after: auto;
   break-after: auto;
 }
 
 .avery-5163:nth-of-type(2n) {
-  float: right;
+  /* float: right; */
   padding-left: 0.125in;
 }
 .avery-5163:nth-of-type(2n + 1) {
   clear: left;
-  float: left;
+  /* float: left; */
   padding-right: 0.125in;
   margin-left: 0.125in;
 }
 
 /*** 22513 Label (3 1/3 x 4) ***/
 .avery-22513.safari-label {
-  width: 3.7125in !important;
-  height: 2.85in !important;
+  width: 3.7125in;
+  height: 2.85in;
 }
 
 /* reset for chrome */
 .avery-22513,
 .avery-22513.chrome-label {
-  height: 3in;
   width: 3.75in;
+  height: 3in;
 }
+
+.avery-22513:nth-child(6n) {
+  page-break-after: always;
+  break-after: always;
+}
+
 .avery-22513:nth-of-type(2n) {
-  float: right;
+  /* float: right; */
   padding-left: 0.125in;
 }
 .avery-22513:nth-of-type(2n + 1) {
   clear: left;
-  float: left;
+  /* float: left; */
   padding-right: 0.125in;
   margin-left: 0.125in;
+}
+
+@media print {
+  body {
+    margin: 0;
+  }
 }
