--- a/frontend/views/top_containers/bulk_operations/_search_criteria.html.erb
+++ b/frontend/views/top_containers/bulk_operations/_search_criteria.html.erb
@@ -63,7 +63,7 @@
           <select name="has_location" id="has_location" class="form-control"><option></option><option value="yes"><%= t("top_container._frontend.bulk_operations.has_location_true") %></option><option value="no"><%= t("top_container._frontend.bulk_operations.has_location_false") %></option></select>
         </div>
       </div>
-      <div class="form-group">
+      <div class="form-group row">
         <label class="control-label col-sm-2 text-right" for="indicator"><%= I18n.t("top_container.indicator") %></label>
         <div class="controls col-sm-8">
           <%= text_field_tag "indicator", params["indicator"], :style => "width: 100%;", :class => "form-control", :placeholder => I18n.t("top_container_labels._frontend.bulk_operations.indicator_search_hint") %>
